--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1012,6 +1012,9 @@
                 "downloadQR": "Download QRCode",
                 "myMap": "This is my map: "
             },
+            "news": {
+                "headline": "News"
+            },
             "bufferAnalysis": {
                 "sourceSelectLabel": "source layer",
                 "targetSelectLabel": "target layer",
