--- a/locales/de/common.json
+++ b/locales/de/common.json
@@ -1304,6 +1304,7 @@
                 "notFound": "Dienst nicht erreichbar"
             },
             "showAllResults": "alle Ergebnisse anzeigen",
+            "searchResults": "Suchergebnisse",
             "type": {
                 // "street": "Straße",
                 // "district": "Stadtteil",
